fix: fix menu wrap

--- a/style/components/table.sass
+++ b/style/components/table.sass
@@ -1,8 +1,10 @@
+ 
 .menu
   position: fixed
   top: 0
   +flex(row, flex-start)
-  width: 100vw
+  flex-wrap: wrap
+
 
   .MuiButtonBase-root
     // width: 30px !important
@@ -91,3 +93,4 @@
 
 .MuiFormControl-root
   min-width: 150px !important
+  margin: 0 10px !important
